--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
   </header>
 
-  <main class="page-content">
+  <main class="page-content" id="page-content">
 
     <!-- Tasks In Progress -->
     <section class="task-list-wrapper">
